--- a/app/src/main/res/layout/detail_order_layout.xml
+++ b/app/src/main/res/layout/detail_order_layout.xml
@@ -7,7 +7,7 @@
 
     <ImageButton
         android:id="@+id/back_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="45dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
@@ -15,6 +15,20 @@
         android:elevation="12dp"
         android:padding="13dp"
         android:src="@drawable/ic_back_arrow" />
+
+
+    <ImageButton
+        android:id="@+id/show_route"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="350dp"
+        android:background="@drawable/bg_back_btn"
+        android:elevation="10dp"
+        android:src="@drawable/ic_show_route"/>
+
 
 
     <LinearLayout
@@ -80,12 +94,12 @@
 
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:paddingStart="15dp"
+                android:paddingBottom="15dp"
                 android:paddingEnd="15dp">
 
                 <TextView
