--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/test_nav"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical"
-    android:background="@android:color/white">
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/general_notification"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:alpha="0.0"
         android:background="@drawable/bg_notification"
         android:elevation="1px"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
-        android:alpha="0.0"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="14sp"
@@ -27,11 +30,16 @@
         app:layout_constraintVertical_bias="0.0" />
 
 
-    <FrameLayout
+    <fragment
         android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"/>
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_graph" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
