--- a/app/src/main/res/layout/confirm_phone_fragment.xml
+++ b/app/src/main/res/layout/confirm_phone_fragment.xml
@@ -1,152 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:orientation="vertical"
-    android:weightSum="1">
-
-    <ImageButton
-        android:id="@+id/back_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_back_btn"
-        android:elevation="12dp"
-        android:padding="13dp"
-        android:src="@drawable/ic_back_arrow" />
+    android:orientation="vertical">
 
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="15dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto"
-            android:text="@string/input_code"
-            android:textColor="@android:color/black"
-            android:textFontWeight="600"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/show_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/roboto"
-            android:text="Мы отправили его на номер +7 (900) 509-12-62"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:orientation="horizontal"
-            android:weightSum="4">
+            android:orientation="vertical">
 
-            <bonch.dev.presentation.modules.passanger.signup.view.EditTextCode
-                android:id="@+id/code1"
+            <ImageButton
+                android:id="@+id/back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/bg_back_btn"
+                android:elevation="12dp"
+                android:padding="13dp"
+                android:src="@drawable/ic_back_arrow" />
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_et_selector"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:inputType="number"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:textAlignment="center"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/input_code"
                 android:textColor="@android:color/black"
-                android:textCursorDrawable="@drawable/bg_color_cursor"
-                android:textSize="36sp" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-            <bonch.dev.presentation.modules.passanger.signup.view.EditTextCode
-                android:id="@+id/code2"
+            <TextView
+                android:id="@+id/show_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_et_selector"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:inputType="number"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:textAlignment="center"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="15dp"
+                android:fontFamily="@font/roboto"
                 android:textColor="@android:color/black"
-                android:textCursorDrawable="@drawable/bg_color_cursor"
-                android:textSize="36sp" />
+                android:textSize="14sp" />
 
-            <bonch.dev.presentation.modules.passanger.signup.view.EditTextCode
-                android:id="@+id/code3"
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_et_selector"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:inputType="number"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textCursorDrawable="@drawable/bg_color_cursor"
-                android:textSize="36sp" />
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp">
 
-            <bonch.dev.presentation.modules.passanger.signup.view.EditTextCode
-                android:id="@+id/code4"
-                android:layout_width="match_parent"
+                <bonch.dev.presentation.modules.passanger.signup.view.PinEntryEditText
+                    android:id="@+id/code_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:cursorVisible="false"
+                    android:digits="1234567890"
+                    android:maxLength="4"
+                    android:background="@drawable/bg_et_selector"
+                    android:inputType="number"
+                    android:textIsSelectable="false"
+                    android:textSize="36sp" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/error_code"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_et_selector"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:inputType="number"
-                android:maxLength="1"
-                android:maxLines="1"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textCursorDrawable="@drawable/bg_color_cursor"
-                android:textSize="36sp" />
-
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/errorCode"
+                android:textColor="#F91010"
+                android:textSize="12sp"
+                android:visibility="invisible" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/error_code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="12sp"
-            android:text="@string/errorCode"
-            android:textColor="#F91010"
-            android:visibility="invisible"/>
-    </LinearLayout>
+
+    </ScrollView>
 
 
     <LinearLayout
+        android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_layout">
 
         <TextView
             android:id="@+id/retry_send"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:textAlignment="center"
             android:textColor="#50000000" />
 
@@ -155,7 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/bg_btn_gray"
@@ -166,4 +130,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
