--- a/app/src/main/res/layout/full_name_signup_fragment.xml
+++ b/app/src/main/res/layout/full_name_signup_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,132 +7,142 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <ImageButton
-        android:id="@+id/back_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/bg_back_btn"
-        android:elevation="12dp"
-        android:padding="13dp"
-        android:src="@drawable/ic_back_arrow" />
 
-
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="15dp"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto"
-            android:text="@string/who_are_you"
-            android:textColor="@android:color/black"
-            android:textFontWeight="600"
-            android:textSize="24sp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/roboto"
-            android:text="@string/your_name_display_for_driver"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@+id/btn_done"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical"
-            android:weightSum="8">
+            android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/first_name_layout"
+            <ImageButton
+                android:id="@+id/back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/bg_back_btn"
+                android:elevation="12dp"
+                android:padding="13dp"
+                android:src="@drawable/ic_back_arrow" />
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:gravity="bottom"
-                android:hint="@string/your_name"
-                app:hintEnabled="false"
-                app:hintTextColor="#000000">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/who_are_you"
+                android:textColor="@android:color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/first_name"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="15dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/your_name_display_for_driver"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="15dp"
+                android:orientation="vertical"
+                android:weightSum="8">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/first_name_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_et_selector"
-                    android:cursorVisible="true"
+                    android:layout_height="50dp"
+                    android:gravity="bottom"
                     android:hint="@string/your_name"
-                    android:nextFocusDown="@+id/last_name"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="0dp"
-                    android:singleLine="true"
-                    android:textColor="@android:color/black"
-                    android:textColorHint="#60000000"
-                    android:textCursorDrawable="@drawable/bg_color_cursor"
-                    android:textSize="16sp" />
+                    app:hintEnabled="false"
+                    app:hintTextColor="#000000">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <EditText
+                        android:id="@+id/first_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_et_selector"
+                        android:cursorVisible="true"
+                        android:hint="@string/your_name"
+                        android:nextFocusDown="@+id/last_name"
+                        android:paddingStart="0dp"
+                        android:paddingEnd="0dp"
+                        android:singleLine="true"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="#60000000"
+                        android:textCursorDrawable="@drawable/bg_color_cursor"
+                        android:textSize="16sp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/last_name_layout"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="40dp"
-                android:gravity="bottom"
-                android:hint="@string/your_family"
-                app:hintEnabled="false"
-                app:hintTextColor="#000000">
-
-                <EditText
-                    android:id="@+id/last_name"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/last_name_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_et_selector"
-                    android:cursorVisible="true"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="40dp"
+                    android:gravity="bottom"
                     android:hint="@string/your_family"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="0dp"
-                    android:singleLine="true"
-                    android:textColor="@android:color/black"
-                    android:textColorHint="#60000000"
-                    android:textCursorDrawable="@drawable/bg_color_cursor"
-                    android:textSize="16sp" />
+                    app:hintEnabled="false"
+                    app:hintTextColor="#000000">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <EditText
+                        android:id="@+id/last_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_et_selector"
+                        android:cursorVisible="true"
+                        android:hint="@string/your_family"
+                        android:paddingStart="0dp"
+                        android:paddingEnd="0dp"
+                        android:singleLine="true"
+                        android:textColor="@android:color/black"
+                        android:textColorHint="#60000000"
+                        android:textCursorDrawable="@drawable/bg_color_cursor"
+                        android:textSize="16sp" />
 
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
+    </ScrollView>
 
-    <LinearLayout
+    <Button
+        android:id="@+id/btn_done"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom"
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/bg_btn_gray"
+        android:fontFamily="@font/roboto"
+        android:text="@string/next"
+        android:textAllCaps="false"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_layout" />
 
-        <Button
-            android:id="@+id/btn_done"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_btn_gray"
-            android:fontFamily="@font/roboto"
-            android:text="@string/next"
-            android:textAllCaps="false"
-            android:textSize="16sp" />
 
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
