--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorBlue">#1152FD</color>
     <color name="colorBlack">#2B2B2B</color>
     <color name="colorGray">#C7CAD7</color>
+    <color name="normalStateET">#20000000</color>
 </resources>
