--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -110,7 +110,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/forMoreTrustDrivers"
                     android:textColor="#60000000"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
