--- a/app/src/main/res/layout/detail_order_layout.xml
+++ b/app/src/main/res/layout/detail_order_layout.xml
@@ -4,6 +4,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:visibility="gone"
+        android:id="@+id/show_animation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:clickable="true"
+        android:elevation="50dp"
+        android:focusable="true">
+
+
+        <TextView
+            android:layout_centerInParent="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="@string/offerYourPriceWait"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
+
+        <Button
+            android:id="@+id/cancel_ride"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_btn_black"
+            android:fontFamily="@font/roboto"
+            android:text="@string/cancelRide"
+            android:textAllCaps="false"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
 
     <ImageButton
         android:id="@+id/back_btn"
@@ -21,14 +58,14 @@
         android:id="@+id/show_route"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_above="@id/main_info_layout"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="350dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/bg_back_btn"
         android:elevation="10dp"
-        android:src="@drawable/ic_show_route"/>
-
+        android:paddingEnd="1dp"
+        android:src="@drawable/ic_show_route" />
 
 
     <LinearLayout
@@ -36,14 +73,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@android:color/white"
         android:elevation="20dp"
         android:orientation="vertical">
-
-        <View
-            android:id="@+id/timer_order"
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:background="@color/colorBlue" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,13 +91,13 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/img_driver"
+                    android:id="@+id/img_passanger"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
                     android:src="@drawable/ava" />
 
                 <TextView
-                    android:id="@+id/driver_name"
+                    android:id="@+id/passanger_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -74,19 +106,17 @@
                     android:gravity="center"
                     android:maxWidth="100dp"
                     android:singleLine="true"
-                    android:text="Александр"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/driver_rating"
+                    android:id="@+id/passanger_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
                     android:drawableStart="@drawable/ic_star"
                     android:drawablePadding="5dp"
                     android:fontFamily="@font/roboto"
-                    android:text="4.6"
-                    android:layout_marginBottom="15dp"
                     android:textColor="#50000000"
                     android:textSize="16sp" />
 
@@ -99,8 +129,8 @@
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:paddingStart="15dp"
-                android:paddingBottom="15dp"
-                android:paddingEnd="15dp">
+                android:paddingEnd="15dp"
+                android:paddingBottom="15dp">
 
                 <TextView
                     android:id="@+id/from_order"
@@ -111,7 +141,6 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/roboto"
                     android:maxLines="2"
-                    android:text="Чкалe wrgwe s asdas цуайцуац уауцаца уdasda sdsa"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
@@ -126,7 +155,6 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/roboto"
                     android:maxLines="2"
-                    android:text="Чкалов7 sadasdas derfasdasdsa"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
@@ -138,15 +166,15 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:alpha="0.3"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:alpha="0.3"
             android:background="#000000" />
 
         <LinearLayout
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:weightSum="1">
 
@@ -163,11 +191,11 @@
                 android:maxLines="3"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
-                android:text="Со мной будет собака, а еще можно пwqwроветрить автомобиль до моего. wer wer "
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
 
             <View
+                android:id="@+id/line_comment_price"
                 android:layout_width="1px"
                 android:layout_height="match_parent"
                 android:alpha="0.3"
@@ -184,7 +212,6 @@
                 android:gravity="center"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
-                android:text="350"
                 android:textColor="@android:color/black"
                 android:textSize="32sp"
                 android:textStyle="bold" />
@@ -193,7 +220,7 @@
 
 
         <Button
-            android:id="@+id/btn_done"
+            android:id="@+id/confirm_with_price"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
@@ -208,7 +235,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/checkout_driver"
+            android:id="@+id/offer_price"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="15dp"
@@ -276,5 +303,15 @@
         </LinearLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+    <View
+        android:id="@+id/on_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="@android:color/black"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
