--- a/app/src/main/res/layout/order_track_ride_layout.xml
+++ b/app/src/main/res/layout/order_track_ride_layout.xml
@@ -100,7 +100,6 @@
                     android:maxLines="2"
                     android:paddingStart="0dp"
                     android:paddingEnd="10dp"
-                    android:text="qw efq e fwqe qwef weq wefqw efq e fwqe qwef weq wef"
                     android:textAlignment="gravity"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
@@ -124,7 +123,6 @@
                     android:maxLines="2"
                     android:paddingStart="0dp"
                     android:paddingEnd="10dp"
-                    android:text="wqe qwef qefwer gwegfq wef"
                     android:textAlignment="gravity"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
@@ -151,22 +149,22 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/img_driver"
+                    android:id="@+id/img_passanger"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ava" />
 
                 <TextView
-                    android:id="@+id/driver_name"
+                    android:id="@+id/passanger_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="15dp"
-                    android:maxWidth="120dp"
+                    android:ellipsize="end"
+                    android:maxWidth="100dp"
                     android:singleLine="true"
-                    android:text="Александр"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
 
@@ -337,6 +335,7 @@
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/main_coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="10dp">
@@ -379,7 +378,7 @@
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
-                android:text="Проблемы с машиной"
+                android:text="@string/problemWithCar"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -391,10 +390,9 @@
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
-                android:text="Некорректное поведение пассажира"
+                android:text="@string/passangerWithChild"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
-
 
             <TextView
                 android:id="@+id/case3"
@@ -404,7 +402,7 @@
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
                 android:paddingBottom="17dp"
-                android:text="Пассажир не вышел"
+                android:text="@string/passangerError"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -416,8 +414,21 @@
                 android:drawableEnd="@drawable/ic_arrow_right"
                 android:fontFamily="@font/roboto"
                 android:paddingTop="17dp"
+                android:paddingBottom="17dp"
+                android:text="@string/passangerNotGoOut"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+
+            <TextView
+                android:id="@+id/case5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_arrow_right"
+                android:fontFamily="@font/roboto"
+                android:paddingTop="17dp"
                 android:paddingBottom="27dp"
-                android:text="Другая причина"
+                android:text="@string/reasonCancel4"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -426,7 +437,7 @@
 
 
         <LinearLayout
-            android:id="@+id/time_expired_bottom_sheet"
+            android:id="@+id/passanger_cancelled_bottom_sheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_corners_layout"
@@ -466,7 +477,162 @@
         </LinearLayout>
 
 
+        <LinearLayout
+            android:id="@+id/comment_bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="450dp"
+            android:background="@drawable/bg_corners_layout"
+            android:elevation="30dp"
+            android:orientation="vertical"
+            app:behavior_peekHeight="0dp"
+            app:layout_behavior=".presentation.base.MBottomSheet">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+                    android:id="@+id/comment_back_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:paddingStart="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingEnd="50dp"
+                    android:paddingBottom="15dp"
+                    android:src="@drawable/ic_arrow_left" />
+
+
+                <TextView
+                    android:id="@+id/comment_done"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/roboto"
+                    android:gravity="end"
+                    android:padding="15dp"
+                    android:text="@string/send"
+                    android:textColor="@color/colorBlue"
+                    android:textSize="16sp" />
+
+
+            </LinearLayout>
+
+
+            <EditText
+                android:id="@+id/comment_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_marginTop="20dp"
+                android:background="@null"
+                android:hint="@string/writeYourProblem"
+                android:inputType="textMultiLine"
+                android:textColor="@android:color/black"
+                android:textColorHint="#60000000"
+                android:textCursorDrawable="@drawable/bg_color_cursor" />
+
+
+        </LinearLayout>
+
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator_confirm_cancel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="10dp">
+
+        <LinearLayout
+            android:id="@+id/confirm_cancel_bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_corners_layout"
+            android:elevation="10dp"
+            android:orientation="vertical"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:behavior_peekHeight="0dp"
+            app:layout_behavior=".presentation.base.MBottomSheet">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_bottom_sheet_arrow" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/roboto"
+                android:text="@string/cancelRideQuestion"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="28sp" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:paddingBottom="20dp"
+                android:weightSum="1">
+
+                <TextView
+                    android:id="@+id/not_cancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_not_cancel_btn"
+                    android:fontFamily="@font/roboto"
+                    android:paddingStart="17dp"
+                    android:paddingTop="17dp"
+                    android:paddingEnd="17dp"
+                    android:paddingBottom="17dp"
+                    android:text="@string/notCancel"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp" />
+
+
+                <TextView
+                    android:id="@+id/cancel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/bg_cancel_btn"
+                    android:fontFamily="@font/roboto"
+                    android:paddingStart="33dp"
+                    android:paddingTop="17dp"
+                    android:paddingEnd="33dp"
+                    android:paddingBottom="17dp"
+                    android:text="@string/cancel"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <View
+        android:id="@+id/on_view_cancel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="@android:color/black"
+        android:visibility="gone" />
 
 </RelativeLayout>
