--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -77,7 +77,8 @@
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mini_profile">
+        app:layout_constraintTop_toBottomOf="@+id/mini_profile"
+        app:layout_constraintBottom_toTopOf="@+id/checkout_account">
 
         <LinearLayout
             android:layout_width="match_parent"
