add time picker

--- a/app/src/main/res/layout/regular_drive_fragment.xml
+++ b/app/src/main/res/layout/regular_drive_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/offer"
+        android:id="@+id/create_regular_ride"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
