--- a/app/src/main/res/layout/regular_create_ride.xml
+++ b/app/src/main/res/layout/regular_create_ride.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/create_regular_ride_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/general_notification"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:alpha="0.0"
+        android:background="@drawable/bg_notification"
+        android:elevation="1px"
+        android:fontFamily="@font/roboto"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:translationZ="15dp" />
 
     <com.yandex.mapkit.mapview.MapView
         android:id="@+id/map"
@@ -36,16 +52,13 @@
 
 
     <LinearLayout
-
         android:id="@+id/main_info_layout"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bg_corners_layout"
         android:elevation="30dp"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:orientation="vertical">
 
 
         <LinearLayout
@@ -358,6 +371,48 @@
                 android:text="@string/add_payment"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/select_time_bottom_sheet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_corners_layout"
+            android:elevation="10dp"
+            android:orientation="vertical"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:behavior_peekHeight="0dp"
+            app:layout_behavior=".presentation.base.MBottomSheet">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_bottom_sheet_arrow" />
+
+            <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
+                android:id="@+id/picker_select_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="70dp"
+                app:picker_curved="true"
+                app:picker_displayDays="false"
+                app:picker_displayDaysOfMonth="false"
+                app:picker_displayHours="true"
+                app:picker_displayMinutes="true"
+                app:picker_displayMonth="false"
+                app:picker_displayMonthNumbers="false"
+                app:picker_displayYears="false"
+                app:picker_itemSpacing="46dp"
+                app:picker_selectorHeight="0dp"
+                app:picker_stepSizeMinutes="5"
+                app:picker_textSize="40sp"
+                app:picker_visibleItemCount="5" />
+
 
         </LinearLayout>
 
@@ -996,7 +1051,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <View
-        android:id="@+id/on_map_view"
+        android:id="@+id/on_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0"
