--- a/app/src/main/res/layout/detail_order_layout.xml
+++ b/app/src/main/res/layout/detail_order_layout.xml
@@ -124,7 +124,7 @@
                     android:id="@+id/img_passanger"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
-                    android:src="@drawable/ava" />
+                    android:src="@drawable/ic_default_ava" />
 
                 <TextView
                     android:id="@+id/passanger_name"
