--- a/app/src/main/res/drawable/ic_seekbar_thumb.xml
+++ b/app/src/main/res/drawable/ic_seekbar_thumb.xml
@@ -4,21 +4,21 @@
     android:height="50dp"
     android:viewportWidth="68"
     android:viewportHeight="46">
-    <path
-        android:fillColor="#1152FD"
-        android:pathData="M8,0 L60,0 Q68,0,68,8 L68,38 Q68,46,60,46 L8,46 Q0,46,0,38 L0,8 Q0,0,8,0 Z" />
 
     <path
-        android:fillColor="#000000"
-        android:strokeColor="#ffffff"
-        android:strokeWidth="2"
-        android:strokeLineJoin="round"
-        android:strokeLineCap="round"
-        android:pathData="M19,23 L44,23" />
+        android:fillColor="#1152FD"
+        android:pathData="M10,0 L58,0 Q68,0,68,10 L68,36 Q68,46,58,46 L10,46 Q0,46,0,36 L0,10 Q0,0,10,0 Z" />
     <path
-        android:strokeColor="#ffffff"
+        android:fillColor="#000000"
+        android:pathData="M19,23 L44,23"
         android:strokeWidth="2"
-        android:strokeLineJoin="round"
+        android:strokeColor="#ffffff"
         android:strokeLineCap="round"
-        android:pathData="M35,14 L45,23 L35,32" />
+        android:strokeLineJoin="round" />
+    <path
+        android:pathData="M35,14 L45,23 L35,32"
+        android:strokeWidth="2"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
