--- a/app/src/main/res/layout/driver_item.xml
+++ b/app/src/main/res/layout/driver_item.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/img_driver"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/ava" />
+                android:src="@drawable/ic_default_ava" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -53,7 +53,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto"
-                    android:text="Сергей"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -64,7 +63,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Kia Rio"
                     android:textColor="@android:color/black"
                     android:textSize="14sp" />
 
@@ -77,7 +75,6 @@
                     android:drawableStart="@drawable/ic_star"
                     android:drawablePadding="5dp"
                     android:fontFamily="@font/roboto"
-                    android:text="4.6"
                     android:textColor="#50000000"
                     android:textSize="16sp" />
 
@@ -89,7 +86,6 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
                 android:gravity="center"
-                android:text="350"
                 android:textColor="@android:color/black"
                 android:textSize="24sp"
                 android:textStyle="bold" />
