--- a/app/src/main/res/layout/get_driver_layout.xml
+++ b/app/src/main/res/layout/get_driver_layout.xml
@@ -372,7 +372,7 @@
                     android:id="@+id/bs_img_driver"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/ava" />
+                    android:src="@drawable/ic_default_ava" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -425,19 +425,33 @@
 
             </LinearLayout>
 
-
-            <Button
-                android:id="@+id/confirm_accept_driver"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/bg_btn_blue"
-                android:fontFamily="@font/roboto"
-                android:shadowColor="@color/colorBlue"
-                android:text="@string/letsGo"
-                android:textAllCaps="false"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/confirm_accept_driver"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/bg_btn_blue"
+                    android:fontFamily="@font/roboto"
+                    android:shadowColor="@color/colorBlue"
+                    android:text="@string/letsGo"
+                    android:textAllCaps="false"
+                    android:textSize="16sp" />
+
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:elevation="10dp"
+                    android:theme="@style/WhiteProgressBar"
+                    android:visibility="gone" />
+            </RelativeLayout>
         </LinearLayout>
 
 
